Add material for the describe page
Add describe material into the describe page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             <p>Members: Akhtar, Omar (<a href="https://github.com/TSyndrome">TSyndrome</a>)  Cao, Qilu (<a href="https://github.com/Luke-pitt">Luke-pitt</a>)  Cheng, Yu (<a href="https://github.com/chengyu6419515">chengyu6419515</a>)  Tong, Kefei (<a href="https://github.com/KieferTowne">KieferTowne</a>)  Xi, Peng (<a href="https://github.com/rogerxi">rogerxi</a>)  Yang, Zhijie (<a href="https://github.com/Miraclekiss">Miraclekiss</a>)  Zou, Haoda (<a href="https://github.com/zenithda13">zenithda13</a>)</p>
           </div>
           <div id="description" style="display:none">
-            <p>Main Parts</p>
+            <p>We create a system to visualize the data source registered in Metadata.</p>
+            <p>Once the system finds the targeted data, users are first directed to a new page named dashboard. In dashboard, users need to create a new canvas in order to visualize targeted data. Canvas is a place to put charts or some other visualize forms. A canvas has its own name, ID, creation time and other attributes. Then users need to create a new story, which is more like the data source. Users can add one or more than one targeted datasets into a story. After that, users can choose various types of charts for targeted data in the story, including pie charts, motion charts and so on.</p>
+            <p>In order to accomplish these functions, the work of visualization contains four parts. The first part deals with tables, which stores information about canvases, stories and charts. The second part called DAO is used for connecting databases using Hibernate. The third part is called Manager, which is used for implementing different functions using Hibernate, such as adding canvases. The last part is Java classes, which call different functions to accomplish our goals. </p>
+            <p>To implement these functions, we used HTML, CSS, JavaScript and KnocoutJS for the interface design. And we used Java, RESTful API and Hibernate for the back-end designing.</p>
           </div>
           <div id="api" style="display:none">
             <p>Google API</p>
