--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a id="multidbs-vis-server" class="anchor" href="#multidbs-vis-server" aria-hidden="true"><span class="octicon octicon-link"></span></a>MultiDBs-Visualization</h1>
           <div id="home">
 
-            <p>In this project, we will visualize the data from the data sources registered in the MetaStore. For the front-end design, we use HTML, CSS, JavaScript and KnocoutJS for the interface design. And we use Java, RESTful API and Hibernate for the back-end design. Besides these techniques, we may need many other ones to accomplish the functions.</p>
+            <p>In this project, we will visualize the data from the different databases. For the front-end design, we use HTML, CSS, JavaScript and KnocoutJS for the interface design. And we use Java, RESTful API and Hibernate for the back-end design.</p>
 
             <p>Project page: <a href="http://54.173.71.235/">MultiDBs-Vis</a></p>
 
@@ -67,85 +67,90 @@
             <h2>Use Cases</h2>
             <p>In our project, users should be able to create and delete canvases. After creating a canvas, they can add stories to it. Here we connect to keyword search group to provide users with keyword search function to search for their target databases. Then based on the databases or tables they add, they could select certain columns and visualize them with Google Chart.</p>
             <p>In order to implement these functions, the work of visualization contains four parts. The first part deals with tables, which stores information about canvases, stories and charts. The second part called DAO is used for connecting databases using Hibernate. The third part is called Manager, which is used for implementing different functions using Hibernate, such as adding canvases. The last part is Java classes, which call different functions to accomplish our goals.</p>
-            <p>To implement these functions, we used HTML, CSS, and jQuery for the interface design. And we used Java, RESTful API and Hibernate for the back-end design.</p>
-            <h2>Work with other MultiDBs projects</h2>
-            <p>The following figure describes how our project work with other MultiDBs projects:</p>
-            <img src="images/Structure.png" />
-            <p>After creating a canvas, it will be stored in our local database. Then we will add story to the canvas, we need to connect to the keyword search, sending then the keyword of our target database, and they will return us the database id, database name, and table name. At this time, the story will also be added to our visualization local database. Then we open the story and starting creating the charts. We send the request for columns to Metastore and they will return us with column names, thus enable us to select the columns that we want to visualize. After we specify the columns, we send a SQL query in JSON format to PrestoDB, and the will send us the data, also in JSON as return. Then the chart will also be stored in our local database and shown on the page.</p>
+
+
             <h2>Requirements and Installation</h2>
-            <p>To build our project, you will need to install Maven and git on Ubuntu server. Just run the startup.sh file to install everything you need. Here is the illustration of the Linux commands: </p>
-            1. Install the essentials:<br>
+            <p>To build our project, you will need to install Maven and git on Linux like server. Here are the commands that you need to type in the terminal at the very first beginning:</p>
+            <h3>1. Install the essentials</h3>
+            First of all, you need to update the apt-get:<br>
             <code> 
-			sudo apt-get install maven<br>
+			sudo apt-get update<br>
+			</code>
+            <code> 
 			sudo apt-get install git<br>
+			sudo apt-get install maven<br>
 			sudo apt-get install openjdk-7-jdk<br>
-			sudo apt-get install mysql-server<br>
 			sudo apt-get install nginx<br>
+			sudo apt-get install mysql-server<br>
 			</code>
 			<br>
-			2. Create folders:<br>
+			During the process of installing mysql-server, there would be a pop up window that remind you to set up the intial password. The default username is root, so just pick a password for that. 
+			<h3>2. Set up mysql: </h3>
+			Type the following command to login to your mysql:<br>
+			<code> 
+			mysql -uroot -pYourpassword<br>
+			</code>
+			<br>
+			Here "Yourpassword" is the password that you just set for root.<br>
+			Then run the following commands:<br>
+			<code> 
+			CREATE USER 'dataverse' @ '%' IDENTIFIED BY 'dataverse';<br>
+			GRANT ALL PRIVILEGES ON *.* TO 'dataverse' @ '%' WITH GRANT OPTION;<br>
+			CREATE DATABASE visualization;<br>
+			exit<br>
+			</code>
+			<br>
+			<h3>3. Create folders:</h3>
+			Type the following commands to create the project folder:<br>
 			<code> 
 			cd /opt<br>
 			sudo mkdir project<br>
 			cd project<br>
 			</code>
 			<br>
-			3. Clone projects from Github:<br>
+			<h3>4. Clone the repositories: </h3>
+			Type the following commands to clone<br>
 			<code> 
+			sudo git clone https://github.com/infsci2711/MultiDBs-Vis-Server.git<br>
 			sudo git clone https://github.com/ColFusion/ColFusionDockerUtils.git<br>
 			sudo git clone https://github.com/ColFusion/ColFusionUtils.git<br>
 			sudo git clone https://github.com/infsci2711/MultiDBs-Utils.git<br>
-			sudo git clone https://github.com/infsci2711/MultiDBs-Vis-Server.git<br>
 			sudo git clone https://github.com/infsci2711/MultiDBs-Vis-WebClient.git<br>
 			</code>
 			<br>
-			4. Serve it with the nginx:<br>
+			<h3>5. Serve with nginx:</h3>
 			<code> 
 			cd /usr/share/nginx<br>
 			sudo rm -R html<br>
 			sudo ln -sv /opt/project/MultiDBs-Vis-WebClient html<br>
 			</code>
 			<br>
-			5. Set up your MySQL:<br>
-			<code> 
-			mysql -u root -proot<br>
-			CREATE USER 'dataverse'@'%' IDENTIFIED BY 'dataverse';<br>
-			GRANT ALL PRIVILEGES ON *.* TO 'dataverse'@'%' WITH GRANT OPTION;<br>
-			CREATE DATABASE visualization;<br>
-			use visualization;<br>
-			../opt/project/MultiDBs-Vis-Server/visualization2.sql;<br>
+			<h3>6. Import the SQL file:</h3>
+			Type the following to import the SQL file: <br>
+			<code>
+			mysql -udataverse -pdataverse visualization < /opt/project/MultiDBs-Vis-Server/visualization2.sql<br>
 			</code>
 			<br>
-			6. Maven install:<br>
+			<h3>7. Run setup.sh:</h3>
+			Type the following for maven install and start the server:<br>
 			<code> 
-			cd /opt/project/ColFusionDockerUtils<br>
-			mvn install<br>
-			cd ..<br>
-			cd ColFusionUtils<br>
-			mvn install<br>
-			cd ..<br>
-			cd MultiDBs-Utils<br>
-			mvn install<br>
-			cd ..<br>
-			cd MultiDBs-Vis-Server<br>
-			mvn install<br>
+			cd /opt/project/MultiDBs-Vis-Server/<br>
+			sh setup.sh<br>
 			</code>
 			<br>
-			7. Start the server:<br>
+			At this time you are supposed to finish all the installation and start the server already.<br>
+			<h3>8. Stop the server</h3>
+			If you want stop the server, run the following commands:<br>
 			<code> 
-			cd /opt/project/MultiDBs-Vis-Server/MultidbsVisServerAPI/target<br>
-			nohup java -jar multidbsvisserverapi-0.1-SNAPSHOT.jar /opt/project/Multidbs-Vis-Server/MultidbsVisServerAPI/src/main/resources/config.properties > log.out 2> error.log < /dev/null &<br>
+			cd /opt/project/MultiDBs-Vis-Server/<br>
+			sh stopserver.sh<br>
 			</code>
-			<br>
-			8. Test if it is running:<br>
-			<code> 
-			lsof -i:7654<br>
-			</code>
-			<br>
-			9. Stop the server from running before pulling from Github:<br>
-			<code> 
-			kill -9 $(lsof -t -i:7654)<br>
-			</code>
+
+
+			<h2>Work with other MultiDBs projects</h2>
+            <p>The following figure describes how our project work with other MultiDBs projects:</p>
+            <img src="images/Structure.png" />
+            <p>After creating a canvas, it will be stored in our local database. Then we will add story to the canvas, we need to connect to the keyword search, sending then the keyword of our target database, and they will return us the database id, database name, and table name. At this time, the story will also be added to our visualization local database. Then we open the story and starting creating the charts. We send the request for columns to Metastore and they will return us with column names, thus enable us to select the columns that we want to visualize. After we specify the columns, we send a SQL query in JSON format to PrestoDB, and the will send us the data, also in JSON as return. Then the chart will also be stored in our local database and shown on the page.</p>
           </div>
           <div id="api" style="display:none">
             <p>In our project, we use RESTful API which is identified by URIs. Here is the tutorial website: <a href="http://www.restapitutorial.com/">http://www.restapitutorial.com/</a></p>
